# library_recommender

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  artist_blacklist_docs.md  environment.yaml  main.py  pyproject.toml  requirements.txt  secrets.env.template  setup.py  version.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  docs.yml  lint.yml  release.yml  tests.yml
data_sources/: albums.py  books.py  fbw_films.py  films.py  guides.py  mp3_analysis.py  oscar_music.py
gui/: __init__.py  app.py
preprocessing/: filters.py
recommender/: __init__.py  recommender.py  state.py
tests/: test_artist_blacklist.py  test_author_match.py  test_balanced_recommender.py  test_blacklist.py  test_filters.py  test_io.py  test_parsers.py  test_recommender.py  test_search_utils.py  test_sources.py  test_state.py
utils/: artist_blacklist.py  blacklist.py  borrowed_blacklist.py  favorites.py  io.py  logging_config.py  search_utils.py  sources.py
